--- a/tex/classes_err.tex
+++ b/tex/classes_err.tex
@@ -22,30 +22,44 @@
   }
 
 \begin{tikzpicture}
+  \pgfplotsset{
+      scale only axis,
+      % scaled x ticks=false,
+      grid=both,
+      grid style={line width=.1pt, draw=black, dotted},
+      major grid style={line width=.2pt,draw=black, dotted},
+      legend pos=south east,
+      % yticklabel style={
+      %         /pgf/number format/fixed,
+      %         /pgf/number format/precision=5
+      % },
+      % scaled y ticks=false
+      % legend style={font=\small},
+  }
   \begin{axis}
     [
-    scale only axis,
-    grid=both,
-    grid style={line width=.1pt, draw=gray!10},
-    major grid style={line width=.2pt,draw=gray!50},
-    minor tick num=3,
-    ytick={0,25,...,100},
-    xtick={0,10,...,90},
+    ytick={0,0.2,...,1},
+    xtick={0,0.2,...,2},
     xmin=0,
-    xmax=90,
-    xlabel={sensor-target distance (\si{\metre})},
-    ylabel={class recall (\%)},
+    xmax=2,
+    xlabel={localization error (\si{\metre})},
+    ylabel={cumulative frequency},
     y label style={at={(axis description cs:-0.08,.5)},anchor=south},
     ymin = 0,
-    ymax = 100,
-    legend style={at={(1,1)}, anchor=north east}
+    ymax = 1,
+    legend style={at={(1,0)}, anchor=south east},
+    % const plot mark mid
+    % bar width=5.7,
     ]
     \addplot [red, mark=o, mark size=0.9, thick, miter limit=1]
-       table [x=dist, y expr={100.0*\thisrow{pcclassA}}, col sep=comma] {data/stats_out.csv};
-    \addplot [\cGreen, mark=*, mark size=1.5, thick, miter limit=1]
-       table [x=dist, y expr={100.0*\thisrow{pcclassB}}, col sep=comma] {data/stats_out.csv};
+    % \addplot [red, fill, fill opacity=0.33]
+       table [x=err, y=acclassA, col sep=comma] {../output/class_out.csv};
+    \addplot [\cGreen, mark=x, mark size=1.5, thick, miter limit=1]
+    % \addplot [\cGreen, fill, fill opacity=0.33]
+       table [x=err, y=acclassB, col sep=comma] {../output/class_out.csv};
     \addplot [blue, mark=square, mark size=0.9, thick, miter limit=1]
-       table [x=dist, y expr={100.0*\thisrow{pcclassC}}, col sep=comma] {data/stats_out.csv};
+    % \addplot [blue, fill, fill opacity=0.33]
+       table [x=err, y=acclassC, col sep=comma] {../output/class_out.csv};
     \legend{case \textbf{A}, case \textbf{B}, case \textbf{C}}
   \end{axis}
 
@@ -56,6 +70,7 @@
 % dist, err, recall, pdet, pcclassA, pcclassB, pcclassC
 
 \end{document} 
+
 
 
 
